# mtuci-audio

./: README.md  pyproject.toml  test.ipynb
lab1/: lab1.ipynb
lab2/: lab2.ipynb
lab3/: data_preprocessing.ipynb  main.ipynb  task_1_data_preprocessing.ipynb  whisper_asr_domain_eval_results.csv
lab3/asr_minimal_comparison/: summary_group_models.csv  summary_group_whisper_domain.csv
lab3/data/task_1/: transcript_157.txt  transcript_171.txt  transcript_22.txt  transcript_24.txt  transcript_245.txt  transcript_34.txt  transcript_8.txt  transcript_81.txt  transcript_82.txt  transcript_93.txt
lab3/data/task_2/: text1.txt  text2.txt  text3.txt  text4.txt  text5.txt
lab3/results/: gigaam_asr_eval_results.csv  vosk_asr_eval_results.csv  whisper_asr_domain_with_initial_prompt_eval_results.csv  whisper_asr_eval_results.csv
lab4/: lab4.ipynb
lab4/results/: summary_all_models.csv
lab4/results/SeamlessM4T/: metrics.csv
lab4/results/bark/: metrics.csv
lab4/results/kokoro/: metrics.csv
lab4/results/mms/: metrics.csv
lab4/results/speecht5/: metrics.csv
lab56/: generate_audio.py  generate_text.py  sentences_az.txt  sentences_az_example.txt
