[project]
name = "mtuci-audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "datasets[audio]>=4.1.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "librosa>=0.11.0",
    "matplotlib>=3.10.6",
    "tqdm>=4.67.1",
]
