[project]
name = "mtuci-audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.2.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "speechbrain>=1.0.3",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchcodec>=0.8.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]
